# xhs-kos-agent

./: .env.example  .envrc  .gitignore  .gitmodules  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  content_generator_agent.py  enhanced_multi_agent_workflow.py  enhanced_user_analyst_agent.py  llamaindex_manager.py  llm_manager.py  multi_agent_workflow.py  product_define_agent.py  strategy_coordinator_agent.py  user_analyst_agent.py
app/api/: main.py
app/api/routers/: agent_routes.py
app/config/: settings.py
app/infra/dao/: author_dao.py  comment_dao.py  keyword_dao.py  note_dao.py  topic_dao.py
app/infra/db/: async_database.py
app/infra/models/: author_models.py  comment_models.py  keyword_models.py  llm_models.py  note_models.py  tag_models.py  topic_models.py
app/prompts/: __init__.py  content_generator_prompts.py  content_strategy_prompts.py  user_analyst_prompts.py
app/schemas/: author_schemas.py  comment_schemas.py  note_schemas.py  topic_schemas.py
app/scripts/: demo.py  main.py
app/services/comment/: comment_service.py
app/services/coze/: coze_service.py  coze_services.py
app/services/note/: note_detail_service.py  note_list_service.py  note_service.py
app/services/spider/: spider_service.py
app/services/topic/: topic_service.py
app/utils/: file.py  logger.py
cli/: main.py  multi_agent_cli.py
cli/llm/: tag.py
cli/xhs/: note.py
docs/: HOW_TO_USE.md  PROJECT_SUMMARY.md  USAGE.md  USAGE_GUIDE.md  database_structure.sql  folder_structure.md  system_design.md
docs/project-instruction/: coding-design.md  project-design.md
examples/: comment_agent.py  data_agent.py  nl2sql_tool.py
test/: __init__.py  run_tests.py  test_content_generator_agent.py  test_enhanced_multi_agent_workflow.py  test_enhanced_quick.py  test_llamaindex_manager.py  test_llm_manager.py  test_llm_quick.py  test_multi_agent_workflow.py  test_strategy_coordinator_agent.py  test_user_analyst.py
