[project]
name = "xhs-kos-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.4",
    "pyexecjs>=1.5.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "sqlalchemy>=2.0.41",
    "typer>=0.15.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
